trunk/Archive2/cb/91b33a7f0958bc/output
main.cpp: In function 'std::unique_ptr<Resource> allocate()':
main.cpp:7:25: error: could not convert '(operator new(1ul), (<statement>, ((Resource*)<anonymous>)))' from 'Resource*' to 'std::unique_ptr<Resource>'
     return new Resource();
                         ^
main.cpp:8:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
