trunk/Archive2/cb/91b33a7f0958bc/main.cpp
#include <memory>

struct Resource {};

std::unique_ptr<Resource> allocate()
{
    return new Resource();
}
